--- a/ui/src/main/res/layout/info_card_cell_view.xml
+++ b/ui/src/main/res/layout/info_card_cell_view.xml
@@ -9,14 +9,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_marginEnd="@dimen/margin_8dp"
-        android:layout_marginBottom="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/padding_16dp"
+        android:layout_marginTop="@dimen/padding_8dp"
+        android:layout_marginEnd="@dimen/padding_16dp"
+        android:layout_marginBottom="@dimen/padding_8dp"
         android:background="@null">
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tw_info_card_title"
             style="@style/InfoCardCellTitleTextStyle"
             android:background="@null"
             android:text="@string/title_text"
