--- a/sell/src/main/res/layout/fragment_payment_by_cash.xml
+++ b/sell/src/main/res/layout/fragment_payment_by_cash.xml
@@ -9,21 +9,26 @@
     tools:context=".ui.fragment.payment_method.PaymentByCashFragment">
 
     <kg.nurtelecom.ofd.sell.InfoCardCellView
-        android:id="@+id/cw_sum"
+        android:id="@+id/ic_sum"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:title_text="@string/sum_pay"
+        app:is_editable="false"
+        android:background="@color/colorGreen"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <kg.nurtelecom.ofd.sell.InfoCardCellView
-        android:id="@+id/et_received"
+        android:id="@+id/ic_received"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_16dp"
+        app:title_text="@string/et_received"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cw_sum" />
+        app:layout_constraintTop_toBottomOf="@id/ic_sum" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_continue"
