--- a/ui/src/main/res/layout/info_card_cell_view.xml
+++ b/ui/src/main/res/layout/info_card_cell_view.xml
@@ -16,7 +16,7 @@
         android:background="@null">
 
         <TextView
-            android:id="@+id/tw_info_card_title"
+            android:id="@+id/tv_title"
             style="@style/InfoCardCellTitleTextStyle"
             android:background="@null"
             android:text="@string/title_text"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/et_info_card_content"
+            android:id="@+id/et_content"
             style="@style/CardCellValueTextStyle"
             android:layout_width="0dp"
             android:layout_marginTop="5dp"
@@ -33,8 +33,8 @@
             android:inputType="numberDecimal"
             android:textColorHint="@color/colorLightGrey"
             app:layout_constraintEnd_toStartOf="@id/iv_next_icon"
-            app:layout_constraintStart_toStartOf="@id/tw_info_card_title"
-            app:layout_constraintTop_toBottomOf="@id/tw_info_card_title" />
+            app:layout_constraintStart_toStartOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
         <ImageView
             android:id="@+id/iv_next_icon"
