Divide attrs into ProductCellView

--- a/ui/src/main/res/values/attrs.xml
+++ b/ui/src/main/res/values/attrs.xml
@@ -17,7 +17,12 @@
         <attr name="hasCheckBoxButton" format="boolean"/>
         <attr name="hasDoneIcon" format="boolean"/>
         <attr name="hasProductSum" format="boolean"/>
+    </declare-styleable>
 
+    <declare-styleable name="ProductCellView">
+        <attr name="title"/>
+        <attr name="subTitle"/>
+        <attr name="value"/>
         <attr name="showRightIcon" format="boolean"/>
         <attr name="showLeftIcon" format="boolean"/>
         <attr name="showCheckBox" format="boolean"/>
