--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -55,5 +55,6 @@
     <dimen name="height_75dp">75dp</dimen>
     <dimen name="height_18dp">18dp</dimen>
     <dimen name="width_18dp">18dp</dimen>
+    <dimen name="size_18dp">18dp</dimen>
 
 </resources>
