--- a/ui/src/main/res/layout/product_cell_view.xml
+++ b/ui/src/main/res/layout/product_cell_view.xml
@@ -9,11 +9,11 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/cb_productCellView"
+        android:id="@+id/cb_select_item"
         android:visibility="gone"
         android:buttonTint="@color/colorPink"
-        android:minWidth="@dimen/width_18dp"
-        android:minHeight="@dimen/height_18dp"
+        android:minWidth="@dimen/size_18dp"
+        android:minHeight="@dimen/size_18dp"
         tools:checked="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,42 +22,42 @@
     <ImageView
         android:clickable="true"
         android:focusable="true"
-        android:id="@+id/iv_productCell_leftIcon"
+        android:id="@+id/iv_leftIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_remove_circle_outline_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cb_productCellView"
+        app:layout_constraintStart_toEndOf="@id/cb_select_item"
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/tv_productCell_title"
+        android:id="@+id/tv_title"
         style="@style/ProductCellTitleTextStyle"
         tools:text="Title"
-        app:layout_constraintBottom_toTopOf="@id/tv_productCell_subTitle"
-        app:layout_constraintStart_toEndOf="@id/iv_productCell_leftIcon"
+        app:layout_constraintBottom_toTopOf="@id/tv_subTitle"
+        app:layout_constraintStart_toEndOf="@id/iv_leftIcon"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_productCell_subTitle"
+        android:id="@+id/tv_subTitle"
         style="@style/ProductCellSubTitleTextStyle"
         tools:text="Sub title"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_productCell_leftIcon"
-        app:layout_constraintTop_toBottomOf="@+id/tv_productCell_title" />
+        app:layout_constraintStart_toEndOf="@+id/iv_leftIcon"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <TextView
-        android:id="@+id/tv_productCell_value_text"
+        android:id="@+id/tv_cell_value"
         style="@style/ProductCellValueTextStyle"
         tools:text="value"
-        app:layout_constraintTop_toTopOf="@id/tv_productCell_subTitle"
+        app:layout_constraintTop_toTopOf="@id/tv_subTitle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/iv_productCell_right_icon" />
+        app:layout_constraintEnd_toStartOf="@id/iv_right_icon" />
 
     <ImageView
         android:visibility="gone"
-        android:id="@+id/iv_productCell_right_icon"
+        android:id="@+id/iv_right_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
