Rename cellView attrs

--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -50,6 +50,8 @@
     <dimen name="padding_5dp">5dp</dimen>
     <dimen name="padding_0dp">0dp</dimen>
 
+    <dimen name="size_75dp">75dp</dimen>
+
     <dimen name="height_75dp">75dp</dimen>
 
 </resources>
