--- a/ui/src/main/res/values/attrs.xml
+++ b/ui/src/main/res/values/attrs.xml
@@ -19,6 +19,11 @@
         <attr name="hasProductSum" format="boolean"/>
     </declare-styleable>
 
+    <declare-styleable name="CellView">
+        <attr name="title"/>
+        <attr name="subTitle"/>
+        <attr name="showArrowIcon"/>
+        
     <declare-styleable name="InfoCardCellView">
         <attr name="android:background" />
         <attr name="android:textColor" />
