--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -197,7 +197,7 @@
         <item name="android:clickable">true</item>
         <item name="android:background">@color/darkGrey</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/height_75dp</item>
+        <item name="android:layout_height">@dimen/size_75dp</item>
     </style>
 
 
