--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <kg.nurtelecom.ui.toolbar.MainToolbar
+    <kg.nurtelecom.ofd.toolbar.MainToolbar
         android:id="@+id/tb_main"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -14,12 +14,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorBlack"/>
+        android:background="@color/black"/>
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/size_0dp"
+        android:layout_height="@dimen/size_0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,7 +40,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_marginEnd="-65dp"
-            android:background="@color/colorBlack"
+            android:background="@color/black"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/side_menu_main"
             app:itemIconTint="#fff" />
