--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBlack">
+    android:background="@color/black">
     <ImageView
         android:id="@+id/iv_logo_main"
         android:layout_width="80dp"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toBottomOf="@id/iv_logo_main"
         app:layout_constraintStart_toStartOf="@id/tv_app_version"
         app:layout_constraintEnd_toEndOf="@id/tv_app_version"
-        android:layout_marginTop="@dimen/app_margin"/>
+        android:layout_marginTop="@dimen/margin_16dp"/>
     <TextView
         android:id="@+id/tv_app_version"
         style="@style/BaseTextStyle"
@@ -29,6 +29,6 @@
         app:layout_constraintTop_toBottomOf="@id/tv_app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/app_margin"/>
+        android:layout_marginTop="@dimen/margin_16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
