--- a/app/src/main/res/layout/side_menu_main.xml
+++ b/app/src/main/res/layout/side_menu_main.xml
@@ -3,17 +3,17 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="@dimen/padding_16dp"
+    android:padding="@dimen/margin_16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:clickable="false"
     android:focusable="false">
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/main_menu_item_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/main_greeting"
         app:subTitle="@string/startWork" />
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/main_menu_item_app_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
