--- a/sell/src/main/res/layout/card_view.xml
+++ b/sell/src/main/res/layout/card_view.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/delete"
+                android:src="@drawable/ic_baseline_remove_circle_outline_24"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@id/card_content"
                 app:layout_constraintEnd_toStartOf="@id/card_content"
