--- a/ui/src/main/res/layout/edit_text_view.xml
+++ b/ui/src/main/res/layout/edit_text_view.xml
@@ -18,25 +18,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="@dimen/margin_8dp">
 
             <TextView
                 android:id="@+id/price_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/margin_8dp"
                 android:text="@string/price" />
 
             <EditText
                 android:id="@+id/value_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/margin_8dp"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:background="@null"
                 android:hint="@string/zero"
                 android:inputType="number"
-                android:textSize="32sp" />
+                android:textSize="@dimen/text_32sp" />
 
         </LinearLayout>
 
