--- a/ui/src/main/res/layout/main_toolbar.xml
+++ b/ui/src/main/res/layout/main_toolbar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
     android:layout_height="55dp"
-    android:background="@color/colorBlack">
+    android:background="@color/black">
     <TextView
         android:id="@+id/tb_title"
         android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
         android:fontFamily="@font/roboto"
         android:gravity="start|center_vertical"
         android:text="@string/main_greeting"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_20sp" />
 
 </androidx.appcompat.widget.Toolbar>
