--- a/ui/src/main/res/values/attrs.xml
+++ b/ui/src/main/res/values/attrs.xml
@@ -1,37 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="custom_view">
-        <attr name="position" format="enum">
-            <enum name="top" value="0"/>
-            <enum name="middle" value="1"/>
-            <enum name="bottom" value="2"/>
-            <enum name="single" value="3"/>
-        </attr>
-        <attr name="title" format="string"/>
-        <attr name="value" format="string"/>
-        <attr name="text" format="string"/>
-        <attr name="subTitle" format="string"/>
-        <attr name="showArrowIcon" format="boolean"/>
-        <attr name="showSubTitle" format="boolean"/>
-        <attr name="hasRemoveButton" format="boolean"/>
-        <attr name="hasCheckBoxButton" format="boolean"/>
-        <attr name="hasDoneIcon" format="boolean"/>
-        <attr name="hasProductSum" format="boolean"/>
-    </declare-styleable>
-
     <declare-styleable name="ProductCellView">
-        <attr name="title"/>
-        <attr name="subTitle"/>
-        <attr name="value"/>
+        <attr name="title" format="string"/>
+        <attr name="subTitle" format="string"/>
+        <attr name="value" format="string"/>
         <attr name="showRightIcon" format="boolean"/>
         <attr name="showLeftIcon" format="boolean"/>
         <attr name="showCheckBox" format="boolean"/>
     </declare-styleable>
 
+    <declare-styleable name="ToolbarView">
+        <attr name="title"/>
+    </declare-styleable>
+
     <declare-styleable name="CellView">
         <attr name="title"/>
         <attr name="subTitle"/>
-        <attr name="showArrowIcon"/>
+        <attr name="showArrowIcon" format="boolean"/>
+    </declare-styleable>
         
     <declare-styleable name="InfoCardCellView">
         <attr name="android:background" />
