--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -1,37 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--Text Size-->
-    <dimen name="app_text_extra_large">40sp</dimen>
-    <dimen name="app_text_large">20sp</dimen>
-    <dimen name="app_text_normal">16sp</dimen>
-    <dimen name="app_text_small">14sp</dimen>
-
-    <!--Margin-->
-    <dimen name="app_margin_large">24dp</dimen>
-    <dimen name="app_margin">16dp</dimen>
-    <dimen name="app_margin_small">8dp</dimen>
-    <!--Toolbar-->
-    <dimen name="toolbar_height">55.02dp</dimen>
-    <dimen name="toolbar_width">360dp</dimen>
-    <!--Padding-->
-    <dimen name="app_padding">16dp</dimen>
-
-    <dimen name="radius_10dp">5dp</dimen>
-
-
-
-
-
-<!--    new dimens-->
 
     <dimen name="radius_5dp">5dp</dimen>
 
+    <dimen name="text_40sp">40sp</dimen>
+    <dimen name="text_32sp">32sp</dimen>
     <dimen name="text_24sp">24sp</dimen>
     <dimen name="text_20sp">20sp</dimen>
     <dimen name="text_19sp">19sp</dimen>
-    <dimen name="text_14sp">14sp</dimen>
-    <dimen name="text_40sp">40sp</dimen>
     <dimen name="text_16sp">16sp</dimen>
+    <dimen name="text_14sp">14sp</dimen>
 
     <dimen name="margin_36dp">36dp</dimen>
     <dimen name="margin_32dp">32dp</dimen>
@@ -43,18 +21,11 @@
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="margin_0dp">0dp</dimen>
 
-    <dimen name="padding_32dp">32dp</dimen>
-    <dimen name="padding_16dp">16dp</dimen>
-    <dimen name="padding_14dp">14dp</dimen>
-    <dimen name="padding_8dp">8dp</dimen>
-    <dimen name="padding_5dp">5dp</dimen>
-    <dimen name="padding_0dp">0dp</dimen>
 
     <dimen name="size_75dp">75dp</dimen>
-
-    <dimen name="height_75dp">75dp</dimen>
-    <dimen name="height_18dp">18dp</dimen>
-    <dimen name="width_18dp">18dp</dimen>
+    <dimen name="size_48dp">48dp</dimen>
+    <dimen name="size_24dp">24dp</dimen>
     <dimen name="size_18dp">18dp</dimen>
+    <dimen name="size_0dp">0dp</dimen>
 
 </resources>
