--- a/user/src/main/res/layout/fragment_user.xml
+++ b/user/src/main/res/layout/fragment_user.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBlack">
+    android:background="@color/black">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:padding="@dimen/app_padding"
+        android:padding="@dimen/margin_16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:navigationIcon="@drawable/abc_vector_test"
@@ -23,9 +23,9 @@
             android:fontFamily="@font/roboto_thin"
             android:gravity="center_vertical"
             android:text="@string/text_profile"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/app_text_large"
-            android:layout_marginStart="18dp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_20sp"
+            android:layout_marginStart="@dimen/margin_16dp"
             />
 
     </androidx.appcompat.widget.Toolbar>
@@ -42,19 +42,18 @@
             android:id="@+id/main_surname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_input_field"
-            android:layout_marginBottom="@dimen/app_margin">
+            android:layout_marginBottom="@dimen/margin_16dp">
 
             <EditText
-                android:layout_marginTop="@dimen/app_margin_small"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:id="@+id/et_surname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Фамилия"
                 android:background="@null"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/app_text_large"
-                android:textColorHint="@color/colorGrey"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_20sp"
+                android:textColorHint="@color/grey"
                 android:gravity="center_horizontal|top"/>
 
         </com.google.android.material.card.MaterialCardView>
@@ -63,19 +62,18 @@
             android:id="@+id/main_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_input_field"
-            android:layout_marginBottom="@dimen/app_margin">
+            android:layout_marginBottom="@dimen/margin_16dp">
 
             <EditText
                 android:id="@+id/et_name"
-                android:layout_marginTop="@dimen/app_margin_small"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Имя"
                 android:background="@null"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/app_text_large"
-                android:textColorHint="@color/colorGrey"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_20sp"
+                android:textColorHint="@color/grey"
                 android:gravity="center_horizontal|top"/>
 
 
@@ -85,19 +83,18 @@
             android:id="@+id/main_lastname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_input_field"
-            android:layout_marginBottom="@dimen/app_margin">
+            android:layout_marginBottom="@dimen/margin_16dp">
 
             <EditText
                 android:id="@+id/et_lastname"
-                android:layout_marginTop="@dimen/app_margin_small"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Отчество"
                 android:background="@null"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/app_text_large"
-                android:textColorHint="@color/colorGrey"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_20sp"
+                android:textColorHint="@color/grey"
                 android:gravity="center_horizontal|top"/>
 
         </com.google.android.material.card.MaterialCardView>
@@ -106,19 +103,18 @@
             android:id="@+id/main_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_input_field"
-            android:layout_marginBottom="@dimen/app_margin">
+            android:layout_marginBottom="@dimen/margin_16dp">
 
             <EditText
                 android:id="@+id/et_phone"
-                android:layout_marginTop="@dimen/app_margin_small"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="+996"
                 android:background="@null"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/app_text_large"
-                android:textColorHint="@color/colorGrey"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_20sp"
+                android:textColorHint="@color/grey"
                 android:gravity="center_horizontal|top"/>
 
 
@@ -128,29 +124,28 @@
             android:id="@+id/main_identification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_input_field"
-            android:layout_marginBottom="@dimen/app_margin">
+            android:layout_marginBottom="@dimen/margin_16dp">
 
             <EditText
                 android:id="@+id/et_identification"
-                android:layout_marginTop="@dimen/app_margin_small"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="ИНН"
                 android:background="@null"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/app_text_large"
-                android:textColorHint="@color/colorGrey"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_20sp"
+                android:textColorHint="@color/grey"
                 android:gravity="center_horizontal|top"/>
 
         </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
 
-    <kg.nurtelecom.ofd.ui.edittext.InputTextField
-        android:id="@+id/test_password"
+    <kg.nurtelecom.ofd.edittext.InputTextField
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_margin_large"
+        android:layout_height="@dimen/size_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,15 +156,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="0dp"
-        android:backgroundTint="@color/colorGreen"
-        android:layout_margin="@dimen/app_margin"
+        android:backgroundTint="@color/green"
+        android:layout_margin="@dimen/margin_16dp"
         app:cornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Изменить данные"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/app_text_normal">
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_20sp">
 
     </com.google.android.material.button.MaterialButton>
 </androidx.constraintlayout.widget.ConstraintLayout>
