--- a/sell/src/main/res/layout/fragment_payment_method.xml
+++ b/sell/src/main/res/layout/fragment_payment_method.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
+    android:background="@color/black"
     tools:context=".ui.fragment.payment_method.PaymentMethodFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
