--- a/sell/src/main/res/values/styles.xml
+++ b/sell/src/main/res/values/styles.xml
@@ -33,15 +33,15 @@
 
 <!--    Payment method-->
     <style name="normal_size_text">
-        <item name="android:textSize">@dimen/app_text_normal</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
     </style>
 
     <style name="normal_size_black_text" parent="normal_size_text">
-        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="normal_size_white_text" parent="normal_size_text">
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="btn_core" parent="normal_size_text">
@@ -50,18 +50,18 @@
     </style>
 
     <style name="btn_green" parent="btn_core" >
-        <item name="android:textColor">@color/colorWhite</item>
-        <item name="android:backgroundTint">@color/colorGreen</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/green</item>
     </style>
 
     <style name="btn_white" parent="btn_core">
-        <item name="android:textColor">@color/colorBlack</item>
-        <item name="android:backgroundTint">@color/colorWhite</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
     </style>
 
     <style name="style_tw_payment_amount" >
         <item name="android:textSize">@dimen/text_40sp</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 <!--    Payment method-->
 
