--- a/sell/src/main/res/drawable/bg_btn_green.xml
+++ b/sell/src/main/res/drawable/bg_btn_green.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle">
-    <solid android:color="@color/colorGreen" />
+    <solid android:color="@color/green" />
     <corners
         android:bottomLeftRadius="6dp"
         android:bottomRightRadius="6dp"
