--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <kg.nurtelecom.ui.toolbar.MainToolbar
+    <kg.nurtelecom.ofd.toolbar.MainToolbar
         android:id="@+id/tb_sell_main"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorBlack"/>
+        android:background="@color/black"/>
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
@@ -41,7 +41,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_marginEnd="-65dp"
-            android:background="@color/colorBlack"
+            android:background="@color/black"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/side_menu_sell_main"
             app:itemIconTint="#fff" />
