--- a/sell/src/main/res/layout/side_menu_sell_main.xml
+++ b/sell/src/main/res/layout/side_menu_sell_main.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="@dimen/padding_16dp"
+    android:padding="@dimen/margin_16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:clickable="false"
     android:focusable="false">
@@ -13,7 +13,7 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:textColor="@color/colorGrey"
+        android:textColor="@color/grey"
         android:textSize="@dimen/text_14sp"
         android:text="@string/text_shift_opening"
         />
@@ -27,26 +27,31 @@
         android:textSize="@dimen/text_20sp"
         android:text="27.06.20 / 08:45 "
         />
-    <androidx.appcompat.widget.AppCompatButton
+
+    <Button
         android:id="@+id/sell_main_menu_item_sale"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        style="@style/SellGreenButton"
+        android:paddingTop="@dimen/margin_14dp"
+        android:paddingBottom="@dimen/margin_14dp"
+        style="@style/GreenButtonStyle"
         android:text="@string/text_sale" />
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/sell_main_menu_item_return"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        style="@style/SellOrangeButton"
+        android:paddingTop="@dimen/margin_14dp"
+        android:paddingBottom="@dimen/margin_14dp"
+        style="@style/OrangeButtonStyle"
         android:text="@string/text_return" />
 
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_greeting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,9 +59,8 @@
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
         app:title="@string/main_greeting"
-        app:showSubTitle="false"
         app:showArrowIcon="true" />
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_report"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,7 +70,7 @@
         app:title="@string/text_report"
         app:subTitle="@string/text_interim_report"
         app:showArrowIcon="true" />
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,7 +79,7 @@
         app:title="@string/text_history"
         app:subTitle="@string/text_history_list"
         app:showArrowIcon="true" />
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_information"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -83,9 +87,8 @@
         android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginRight="@dimen/margin_16dp"
         app:title="@string/text_information"
-        app:showSubTitle="false"
         app:showArrowIcon="true" />
-    <kg.nurtelecom.ofd.ui.CellView
+    <kg.nurtelecom.ofd.cell.CellView
         android:id="@+id/sell_main_menu_item_operations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -106,7 +109,7 @@
         android:layout_marginTop="@dimen/margin_25dp"
         android:layout_marginRight="@dimen/margin_16dp"
         android:background="@null"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/red"
         android:textSize="@dimen/text_14sp"
         android:text="@string/text_shift_closing_and_report" />
 
