change Product data class

--- a/sell/src/main/res/layout/sell_fragment.xml
+++ b/sell/src/main/res/layout/sell_fragment.xml
@@ -69,6 +69,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:text="Новый продукт"
+            android:backgroundTint="@color/green"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
