--- a/sell/src/main/res/layout/checks_history_details_component_view.xml
+++ b/sell/src/main/res/layout/checks_history_details_component_view.xml
@@ -7,12 +7,10 @@
     android:layout_height="wrap_content">
 
     <kg.nurtelecom.sell.ui.fragment.history.ScrollDisabledListView
-        android:id="@+id/bookDetailsList"
+        android:id="@+id/checksHistoryDetailsList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clickable="false"
-        android:divider="@color/grey"
-        android:dividerHeight="2dp"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/detail_view" />
