--- a/sell/src/main/res/layout/product_list_item.xml
+++ b/sell/src/main/res/layout/product_list_item.xml
@@ -10,10 +10,10 @@
         android:id="@+id/remove_product_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/margin_16dp"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/delete"
+        android:src="@drawable/ic_baseline_remove_circle_outline_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,9 +22,9 @@
         android:id="@+id/product_position_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="8dp"
-        android:text="Позиция №"
+        android:text="@string/position_with_n"
         android:textColor="@android:color/white"
         app:layout_constraintStart_toEndOf="@id/remove_product_iv"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,9 +33,9 @@
         android:id="@+id/product_count_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/margin_8dp"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/product_position_tv"
         tools:text="100 * 2" />
@@ -44,8 +44,8 @@
         android:id="@+id/product_sum_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginEnd="@dimen/margin_8dp"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
