--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -37,7 +37,7 @@
         android:id="@+id/non_fiscal_cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#4A90E2"
+        app:cardBackgroundColor="@color/clickBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -48,7 +48,7 @@
             android:layout_marginTop="@dimen/margin_8dp"
             android:layout_marginEnd="@dimen/margin_8dp"
             android:layout_marginBottom="@dimen/margin_8dp"
-            android:padding="8dp"
+            android:padding="@dimen/margin_8dp"
             tools:text="@string/non_fiscal_mode_message"
             android:textAlignment="center"
             android:textColor="@android:color/white"
