--- a/ui/src/main/res/layout/info_card_cell_view.xml
+++ b/ui/src/main/res/layout/info_card_cell_view.xml
@@ -41,8 +41,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/next_icon_description"
-            android:src="@drawable/next_icon"
+            android:src="@drawable/ic_baseline_arrow_right_alt_24"
             android:visibility="gone"
+            android:layout_marginEnd="@dimen/margin_8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
