--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -30,142 +30,86 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
+    <com.google.android.material.textfield.TextInputEditText
+
+        android:id="@+id/et_Surname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:hint="Фамилия"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:background="@color/white"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/et_Name"/>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/main_surname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_16dp">
+    <com.google.android.material.textfield.TextInputEditText
 
-            <EditText
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:id="@+id/et_surname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Фамилия"
-                android:background="@null"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_20sp"
-                android:textColorHint="@color/grey"
-                android:gravity="center_horizontal|top"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/main_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_16dp">
-
-            <EditText
-                android:id="@+id/et_name"
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Имя"
-                android:background="@null"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_20sp"
-                android:textColorHint="@color/grey"
-                android:gravity="center_horizontal|top"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/main_middlename"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_16dp">
-
-            <EditText
-                android:id="@+id/et_lastname"
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Отчество"
-                android:background="@null"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_20sp"
-                android:textColorHint="@color/grey"
-                android:gravity="center_horizontal|top"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/main_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_16dp">
-
-            <EditText
-                android:id="@+id/et_phone"
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/app_margin_small"
-                android:background="@null"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_20sp"
-                android:textColorHint="@color/grey"
-                android:gravity="center_horizontal|top"/>
-
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/main_identification"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_16dp">
-
-            <EditText
-                android:id="@+id/et_identification"
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="ИНН"
-                android:inputType="number"
-                android:maxLength="14"
-                android:background="@null"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_20sp"
-                android:textColorHint="@color/grey"
-                android:gravity="center_horizontal|top"/>
-
-        </com.google.android.material.card.MaterialCardView>
-
-    </LinearLayout>
-
-    <kg.nurtelecom.ofd.edittext.InputTextField
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/size_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_change"
+        android:id="@+id/et_Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
-        android:backgroundTint="@color/green"
-        android:layout_margin="@dimen/margin_16dp"
-        app:cornerRadius="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="Изменить данные"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_20sp">
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:hint="Имя"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/et_Surname"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/et_Middlename"/>
 
-    </com.google.android.material.button.MaterialButton>
+    <com.google.android.material.textfield.TextInputEditText
+
+        android:id="@+id/et_Middlename"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:hint="Отчество"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/et_Name"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/et_Phone"/>
+
+    <com.google.android.material.textfield.TextInputEditText
+
+        android:id="@+id/et_Phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:hint="+996"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/et_Middlename"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/et_Identification"/>
+
+    <com.google.android.material.textfield.TextInputEditText
+
+        android:id="@+id/et_Identification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:hint="ИНН"
+        android:maxLength="14"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/et_Phone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+
+    <Button
+        android:id="@+id/btn_Change"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/GreenButtonStyle"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:hint="Изменение данных"
+        android:textColorHint="@color/white"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
