--- a/sell/src/main/res/layout/bottom_sheet_fragment.xml
+++ b/sell/src/main/res/layout/bottom_sheet_fragment.xml
@@ -43,7 +43,7 @@
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginRight="@dimen/margin_16dp"
             android:layout_weight="1"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/white"
             android:text="@string/text_shift_closing_description" />
 
         <androidx.appcompat.widget.AppCompatButton
