--- a/sell/src/main/res/layout/card_view.xml
+++ b/sell/src/main/res/layout/card_view.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/delete"
+            android:src="@drawable/ic_baseline_remove_circle_outline_24"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/card_content"
             app:layout_constraintEnd_toStartOf="@id/card_content"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:visibility="gone"
-            android:src="@drawable/arrow_right"
+            android:src="@drawable/ic_baseline_arrow_right_alt_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
