saving data of the user

--- a/ui/src/main/res/layout/input_text_field.xml
+++ b/ui/src/main/res/layout/input_text_field.xml
@@ -9,7 +9,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:background="@color/white"
+        android:background="@color/lightGrey"
+        android:backgroundTint="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +23,7 @@
             android:id="@+id/et_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/lightBlack"
+            android:backgroundTint="@color/lightGrey"
             android:gravity="center"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
