--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -8,6 +8,7 @@
     android:background="@color/black">
 
     <kg.nurtelecom.ofd.toolbar.MainToolbar
+
         android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,8 +24,8 @@
         android:layout_height="wrap_content"
         android:hint="Фамилия"
         android:layout_marginTop="@dimen/margin_16dp"
-        android:background="@color/white"
         android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/main_toolbar"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,10 +36,10 @@
         android:id="@+id/et_Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="@dimen/margin_16dp"
         android:hint="Имя"
         android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/et_Surname"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -49,10 +50,10 @@
         android:id="@+id/et_Middlename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="@dimen/margin_16dp"
         android:hint="Отчество"
         android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/et_Name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -63,30 +64,31 @@
         android:id="@+id/et_Phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="@dimen/margin_16dp"
         android:hint="+996"
         android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/et_Middlename"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/et_Identification"/>
 
-    <kg.nurtelecom.ofd.edittext.InputTextField
+    <com.google.android.material.textfield.TextInputEditText
 
         android:id="@+id/et_Identification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="@dimen/margin_16dp"
         android:hint="ИНН"
         android:maxLength="14"
         android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/et_Phone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
+
         android:id="@+id/btn_Change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,6 +97,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:hint="Изменение данных"
-        android:textColorHint="@color/white"/>
+        android:textColorHint="@color/white"
+        android:layout_marginBottom="@dimen/margin_16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
